--- a/wgscovplot/tmpl/wgscovplot_control_menu.html
+++ b/wgscovplot/tmpl/wgscovplot_control_menu.html
@@ -97,7 +97,7 @@
                                 <div class="form-check form-switch">
                                     <label class="form-check-label" for="toggle-tooltip">Enable</label>
                                     <span class="info-icon text-info ms-1"
-                                          title="Select samples to show in coverage plot">ℹ️</span>
+                                          title="Enable/Disable tooltips">ℹ️</span>
                                     <input class="form-check-input" type="checkbox" id="toggle-tooltip" checked>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                     <label class="form-check-label" for="fix-tooltip-position">Fix Tooltip
                                         Position</label>
                                     <span class="info-icon text-info ms-1"
-                                          title="Fix segmentTooltips table either on top-left or top-right of container">ℹ️</span>
+                                          title="Fix tooltips table either on top-left or top-right of container">ℹ️</span>
                                     <input class="form-check-input" type="checkbox" id="fix-tooltip-position"
                                            unchecked>
                                 </div>
@@ -120,7 +120,7 @@
                                     <label class="form-check-label" for="toggle-tooltip-trigger-click">Show on
                                         click</label>
                                     <span class="info-icon text-info ms-1"
-                                          title="Click mouse to trigger segmentTooltips (default is mouse hover)">ℹ️</span>
+                                          title="Click mouse to trigger tooltips (default is mouse hover)">ℹ️</span>
                                     <input class="form-check-input" type="checkbox"
                                            id="toggle-tooltip-trigger-click" unchecked>
                                 </div>
@@ -132,7 +132,7 @@
                                     <label class="form-check-label" for="toggle-tooltip-variant-sites">Variant
                                         Sites</label>
                                     <span class="info-icon text-info ms-1"
-                                          title="Trigger segmentTooltips for Variant Sites">ℹ️</span>
+                                          title="Trigger tooltips for Variant Sites">ℹ️</span>
                                     <input class="form-check-input" type="checkbox"
                                            id="toggle-tooltip-variant-sites" checked>
                                 </div>
@@ -144,7 +144,7 @@
                                     <label class="form-check-label" for="toggle-tooltip-non-variant-sites">Non
                                         Variant Sites</label>
                                     <span class="info-icon text-info ms-1"
-                                          title="Trigger segmentTooltips for Non Variant Sites">ℹ️</span>
+                                          title="Trigger tooltips for Non Variant Sites">ℹ️</span>
                                     <input class="form-check-input" type="checkbox"
                                            id="toggle-tooltip-non-variant-sites" unchecked>
                                 </div>
