--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="theme-color" content="#000000"/>
   <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico"/>
-  <title>wgscovplot-online-test</title>
+  <title>wgscovplot</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -27,10 +27,11 @@
       db.depths[sample] = xs;
     }
     db.positions = [...Array(db.ref_seq.length + 1).keys()];
+    db.positions.shift();
   } else {
     for (let [sample, segmentDepths] of Object.entries(db.depths)) {
       for (let [segment, depthsBase64] of Object.entries(segmentDepths)) {
-        xs = Array.from(new Uint16Array(new Uint8Array([...atob(depthsBase64)].map(c => c.charCodeAt(0))).buffer));
+        xs = Array.from(new Float32Array(new Uint8Array([...atob(depthsBase64)].map(c => c.charCodeAt(0))).buffer));
         for (let i = 0; i < xs.length; i++) {
           if (xs[i] === 0) {
             xs[i] = 0.0000001;
