--- a/web/wgscovplot.html
+++ b/web/wgscovplot.html
@@ -10,11 +10,9 @@
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <script>
-    db = {{ db | tojson }}
-    console.debug(db);
-      console.time("convert base64 depths");
+  db = {{ db | tojson }}
+  console.debug(db);
   if (db.segments === undefined) {
-
     for (let [sample, depthsBase64] of Object.entries(db.depths)) {
       let xs = Array.from(new Uint16Array(new Uint8Array([...atob(depthsBase64)].map(c => c.charCodeAt(0))).buffer));
       for (let i = 0; i < xs.length; i++) {
@@ -25,7 +23,7 @@
       db.depths[sample] = xs;
     }
     db.positions = [...Array(db.ref_seq.length + 1).keys()];
-    console.log(db.positions)
+    db.positions.shift();
   } else {
     for (let [sample, segmentDepths] of Object.entries(db.depths)) {
       for (let [segment, depthsBase64] of Object.entries(segmentDepths)) {
@@ -39,8 +37,6 @@
       }
     }
   }
-  console.timeEnd("convert base64 depths");
-
 </script>
 <script type="text/javascript">
       {% include "tmpl/assets/index.js" %}
