--- a/web/wgscovplot.html
+++ b/web/wgscovplot.html
@@ -11,7 +11,7 @@
 <div id="root"></div>
 <script>
   db = {{ db | tojson }}
-  console.debug(db);
+  console.log(db)
   if (db.segments === undefined) {
     for (let [sample, depthsBase64] of Object.entries(db.depths)) {
       let xs = Array.from(new Uint16Array(new Uint8Array([...atob(depthsBase64)].map(c => c.charCodeAt(0))).buffer));
